Fix for small image, tested on iPhone 11 and SE.

--- a/src/styles/Body.css
+++ b/src/styles/Body.css
@@ -11,12 +11,16 @@
   justify-self: center;
   width: 350px;
   height: 350px;
+  max-width: 350px;
+  max-height: 350px;
+  min-width: 0px;
+  min-height: 0px;
 }
 
 .image {
   border-radius: 50%;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .text-container {
